Atualizando a index e adicionando as primeiras estilizações

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PiraporaViva</title>
 
+    <link rel="stylesheet" href="/styles/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/swiper.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <script src="/js/swiper.js" defer></script>
 
@@ -20,10 +23,10 @@
         </div>
         <div class="navegacao">
             <ul class="menu-navegacao">
-                <li class="menu-navegacao__itens">Início</li>
-                <li class="menu-navegacao__itens">Destinos</li>
-                <li class="menu-navegacao__itens">Atividades</li>
-                <li class="menu-navegacao__itens">Contato</li>
+                <li class="menu-navegacao__itens"><a href="">Início</a></li>
+                <li class="menu-navegacao__itens"><a href="">Destinos</a></li>
+                <li class="menu-navegacao__itens"><a href="">Atividades</a></li>
+                <li class="menu-navegacao__itens"><a href="">Contato</a></li>
             </ul>
         </div>
     </header>
@@ -51,8 +54,25 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
-        
+
+        <section class="secao-apresentacao">
+            <h3 class="apresentacao-titulo">Lorem ipsum dolor sit amet</h3>
+            <p class="apresentacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod velit nesciunt temporibus tempore pariatur laborum hic dolorem facilis quo atque ducimus, labore exercitationem suscipit, qui obcaecati quos et distinctio dignissimos? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nulla, voluptates id eligendi nihil maiores exercitationem libero quae consequatur a cumque fugiat ipsam sequi hic distinctio quo aliquid praesentium. Sed.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error asperiores ea adipisci eligendi exercitationem facilis ipsum, odio ab ipsa dolores doloribus vel, distinctio iusto maxime nisi praesentium atque illum ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sequi incidunt ducimus sunt a illum possimus laudantium quisquam, perferendis ea atque deserunt repudiandae dignissimos assumenda accusantium consectetur cupiditate minus error!
+            </p>
+        </section>
+
+        <section class="informacoes">
+            <a href="" class="informacoes-link">Sobre mim</a>
+            <a href="" class="informacoes-link">Contato</a>
+            <a href="" class="informacoes-link">Inspiração</a>
+            <a href="" class="informacoes-link">Tecnologias utilizadas</a>
+        </section>
 
     </main>
+
+    <footer class="rodape">
+        <p>PiraporaViva&#169; todos direitos reservados</p>
+    </footer>
 </body>
 </html>
